--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
+    "sequelize": "^4.33.4",
     "serve-favicon": "~2.4.5"
   }
 }
