--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.2",
     "sequelize": "^4.33.4",
     "serve-favicon": "~2.4.5"
   }
