--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
+    "nodemailer": "^4.5.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "sequelize": "^4.33.4",
     "serve-favicon": "~2.4.5"
   }
