--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "iconv-lite": "^0.4.19",
     "jwt-simple": "^0.5.1",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.5.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "request": "^2.83.0",
     "sequelize": "^4.33.4",
     "serve-favicon": "~2.4.5"
   }
